docs: polish wording and table alignment; use List.getFirst()